Feat : Ajout des tests pour modelMapper et changement des records DTO en classe pour faciliter le mapping des DTO en entité et inversement.